# ChangeLog for dev-java/dbunit
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Dec 2008; Mike Weissman <mike@weisso.com> +metadata.xml:
  added metadata.xml

  09 Dec 2008; Mike Weissman <mike@weisso.com> dbunit-2.4.1.ebuild:
  initial ebuilds for dbunit, release and svn
