@@ -1,12 +1,74 @@
+<?xml version="1.0"?>
+
 <project name="dbunit" default="jar" basedir=".">
-	<property name="src" location="org"/>
+	<!-- some properties -->
+	<property name="src.dir" value="org/dbunit" />
+	<property name="build.dir" value="build" />
+	<property name="docs.dir" value="docs" />
+	<property name="lib.dir" value="lib"/>
+	<property name="dist.dir" value="dist" />
+	<property name="jarfile" value="${dist.dir}/dbunit.jar" />
+	<property name="pkg" value="${package.name}"/>
+	<property name="target.jdk" value="1.5" />
 
-	<target name="jar">
-		<jar destfile="dbunit.jar" basedir="${src}"/>
+
+	<available file="${lib}" type="dir" property="libdir.exists"/>
+
+
+	<!-- init -->
+	<target name="init" depends="if-libdir">		
+		<tstamp/>
+		<mkdir dir="${dist.dir}" />
+		<mkdir dir="${build.dir}" />
+		<mkdir dir="${docs.dir}" />
+  	</target>
+
+	 <!-- If the directory exists, append to classpath -->
+	<target name="if-libdir" if="libdir.exists">
+      	<property name="classpath" value="${classpath}:${lib}"/>
+	<classpath>
+		<path id="base.path">
+         	<pathelement path="${classpath}"/>
+		<fileset dir="${lib.dir}">
+			<include name="**/*.jar"/>
+		</fileset>
+		</path>
+     	 	</classpath>
+   	</target>
+
+	<!-- compile everything -->
+	<target name="compile" depends="init">
+		<mkdir dir="${build.dir}" />
+		<javac srcdir="${src.dir}" 
+			destdir="${build.dir}"
+			source="${target.jdk}"
+			target="${target.jdk}"
+			classpath="${classpath}">
+		<classpath refid="base.path"/>
+		</javac>
 	</target>
 
-	<target name="javadoc" depends="jar">
-		<mkdir dir="docs"/>
-		<javadoc sourcepath="${src}" destdir="docs"/>
+	<!-- build the jar file -->
+	<target name="jar" depends="compile">
+		<jar jarfile="${jarfile}" basedir="${build.dir}" />
 	</target>
+	
+	<!-- generate javadocs -->
+	<target name="docs" depends="init">
+		<javadoc sourcepath="${src.dir}"
+			packagenames="org.*"
+           		destdir="${docs.dir}"
+           		author="true"
+           		version="true"
+           		use="true"
+           		windowtitle="${ant.project.name} API" />
+	</target>
+	
+	<!-- clean up -->
+	<target name="clean">
+		<delete dir="${build.dir}" />
+		<delete dir="${docs.dir}" />
+		<delete dir="${dist.dir}" />
+	</target>
+
 </project>
