@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Dec 2008; Mike Weissman <mike@weisso.com> files/build.xml,
+  dbunit-2.4.1.ebuild, dbunit-9999.ebuild:
+  updated build.xml to follow 'packages without build files' outline also
+  updated both ebuilds
+
   09 Dec 2008; Mike Weissman <mike@weisso.com> +metadata.xml:
   added metadata.xml
 
